--- a/wuthering_waves.html
+++ b/wuthering_waves.html
@@ -8,34 +8,43 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
+/* ===============================
+   BASE
+================================ */
+*{ box-sizing:border-box; }
+
 body{
+  margin:0;
+  font-family:system-ui;
   background:#0b1020;
   color:#ffffff;
-  font-family:system-ui;
 }
-*{ color:#ffffff; }
 
+/* ===============================
+   CARD
+================================ */
 .card{
   background:#0f1730;
   border:1px solid #2b3357;
   border-radius:16px;
+  padding:20px;
 }
 
-input{
-  background:#121a33!important;
-  color:#ffffff!important;
-  border:1px solid #2b3357!important;
-}
-
+/* ===============================
+   CHARACTER HEADER
+================================ */
 .char-header{
   display:flex;
-  gap:14px;
+  gap:20px;
 }
 
+/* IMAGE + ICONS = 1 BLOK */
 .char-left{
   display:flex;
   flex-direction:column;
   align-items:center;
+  min-width:320px;          /* 🔥 KRITISCH */
+  flex-shrink:0;
 }
 
 .char-img{
@@ -46,19 +55,25 @@ input{
   background:#1b2450;
 }
 
+/* ===============================
+   RESONANCE ICONS (6 OP 1 RIJ)
+================================ */
 .chain-icons{
-  display:flex;
-  gap:6px;
-  margin-top:8px;
+  display:flex !important;
+  flex-wrap:nowrap !important;
+  gap:10px;
+  margin-top:12px;
+  justify-content:center;
 }
 
 .chain-icon{
-  width:28px;
-  height:28px;
+  width:44px;
+  height:44px;
   background:#1b2450;
-  border-radius:6px;
-  opacity:.3;
+  border-radius:8px;
+  opacity:.25;
   transition:.2s;
+  flex:0 0 auto;            /* 🔥 GEEN WRAP */
 }
 
 .chain-icon.active{
@@ -70,24 +85,19 @@ input{
   cursor:pointer;
 }
 
+.chain-icon.clickable:hover{
+  transform:scale(1.15);
+  opacity:1;
+}
+
 .chain-icon.disabled{
   cursor:not-allowed;
   opacity:.15;
 }
 
-.weapon-icon{
-  width:32px;
-  height:32px;
-  margin-top:6px;
-  cursor:pointer;
-  opacity:.3;
-}
-
-.weapon-icon.active{
-  opacity:1;
-  filter:drop-shadow(0 0 6px #ffcc66);
-}
-
+/* ===============================
+   INFO
+================================ */
 .char-info{
   flex:1;
 }
@@ -97,13 +107,24 @@ input{
   border-radius:999px;
   border:1px solid #2b3357;
   font-size:.75rem;
+  margin-left:6px;
 }
 
+/* ===============================
+   SKILLS
+================================ */
 .skill-row{
   display:flex;
   justify-content:space-between;
-  align-items:center;
   margin-bottom:6px;
+}
+
+input{
+  background:#121a33!important;
+  color:#ffffff!important;
+  border:1px solid #2b3357!important;
+  border-radius:6px;
+  padding:4px 6px;
 }
 </style>
 </head>
@@ -111,85 +132,76 @@ input{
 <body class="container py-4">
 
 <h1 class="fw-bold">Wuthering Waves – Character Tracker</h1>
-<p>Elke character heeft 6 Resonance icons. Icons zijn alleen klikbaar als Owned is aangevinkt.</p>
+<p>Resonance icons zijn alleen klikbaar als Owned is aangevinkt.</p>
 
-<div id="list" class="row g-3"></div>
+<div id="list" class="row g-4"></div>
 
 <script>
-const KEY = "ww_tracker_final_complete";
+/* ===============================
+   CONFIG
+================================ */
+const KEY = "ww_tracker_final";
+const RESONANCE_BASE = "assets/wuwa/resonance";
+const PLACEHOLDER = `${RESONANCE_BASE}/placeholder.jpg`;
 
-/* ---------- CHARACTERS ---------- */
+/* ===============================
+   CHARACTERS
+================================ */
 const CHARACTERS = [
-  {id:"augusta",name:"Augusta",rarity:"5★",image:"assets/wuwa/icons/augusta.jpg",icons:["assets/wuwa/resonance/augusta/1.png","assets/wuwa/resonance/augusta/2.png","assets/wuwa/resonance/augusta/3.png","assets/wuwa/resonance/augusta/4.png","assets/wuwa/resonance/augusta/5.png","assets/wuwa/resonance/augusta/6.png"]},
-  {id:"brant",name:"Brant",rarity:"5★",image:"assets/wuwa/icons/brant.jpg",icons:["assets/wuwa/resonance/brant/1.png","assets/wuwa/resonance/brant/2.png","assets/wuwa/resonance/brant/3.png","assets/wuwa/resonance/brant/4.png","assets/wuwa/resonance/brant/5.png","assets/wuwa/resonance/brant/6.png"]},
-  {id:"calcharo",name:"Calcharo",rarity:"5★",image:"assets/wuwa/icons/calcharo.jpg",icons:["assets/wuwa/resonance/calcharo/1.png","assets/wuwa/resonance/calcharo/2.png","assets/wuwa/resonance/calcharo/3.png","assets/wuwa/resonance/calcharo/4.png","assets/wuwa/resonance/calcharo/5.png","assets/wuwa/resonance/calcharo/6.png"]},
-  {id:"camellya",name:"Camellya",rarity:"5★",image:"assets/wuwa/icons/camellya.jpg",icons:["assets/wuwa/resonance/camellya/1.png","assets/wuwa/resonance/camellya/2.png","assets/wuwa/resonance/camellya/3.png","assets/wuwa/resonance/camellya/4.png","assets/wuwa/resonance/camellya/5.png","assets/wuwa/resonance/camellya/6.png"]},
-  {id:"cantarella",name:"Cantarella",rarity:"5★",image:"assets/wuwa/icons/cantarella.jpg",icons:["assets/wuwa/resonance/cantarella/1.png","assets/wuwa/resonance/cantarella/2.png","assets/wuwa/resonance/cantarella/3.png","assets/wuwa/resonance/cantarella/4.png","assets/wuwa/resonance/cantarella/5.png","assets/wuwa/resonance/cantarella/6.png"]},
-  {id:"carlotta",name:"Carlotta",rarity:"5★",image:"assets/wuwa/icons/carlotta.jpg",icons:["assets/wuwa/resonance/carlotta/1.png","assets/wuwa/resonance/carlotta/2.png","assets/wuwa/resonance/carlotta/3.png","assets/wuwa/resonance/carlotta/4.png","assets/wuwa/resonance/carlotta/5.png","assets/wuwa/resonance/carlotta/6.png"]},
-  {id:"cartethyia",name:"Cartethyia",rarity:"5★",image:"assets/wuwa/icons/cartethyia.jpg",icons:["assets/wuwa/resonance/cartethyia/1.png","assets/wuwa/resonance/cartethyia/2.png","assets/wuwa/resonance/cartethyia/3.png","assets/wuwa/resonance/cartethyia/4.png","assets/wuwa/resonance/cartethyia/5.png","assets/wuwa/resonance/cartethyia/6.png"]},
-  {id:"changli",name:"Changli",rarity:"5★",image:"assets/wuwa/icons/changli.jpg",icons:["assets/wuwa/resonance/changli/1.png","assets/wuwa/resonance/changli/2.png","assets/wuwa/resonance/changli/3.png","assets/wuwa/resonance/changli/4.png","assets/wuwa/resonance/changli/5.png","assets/wuwa/resonance/changli/6.png"]},
-  {id:"chisa",name:"Chisa",rarity:"5★",image:"assets/wuwa/icons/chisa.jpg",icons:["assets/wuwa/resonance/chisa/1.png","assets/wuwa/resonance/chisa/2.png","assets/wuwa/resonance/chisa/3.png","assets/wuwa/resonance/chisa/4.png","assets/wuwa/resonance/chisa/5.png","assets/wuwa/resonance/chisa/6.png"]},
-  {id:"ciaccona",name:"Ciaccona",rarity:"5★",image:"assets/wuwa/icons/ciaccona.jpg",icons:["assets/wuwa/resonance/ciaccona/1.png","assets/wuwa/resonance/ciaccona/2.png","assets/wuwa/resonance/ciaccona/3.png","assets/wuwa/resonance/ciaccona/4.png","assets/wuwa/resonance/ciaccona/5.png","assets/wuwa/resonance/ciaccona/6.png"]},
-  {id:"encore",name:"Encore",rarity:"5★",image:"assets/wuwa/icons/encore.jpg",icons:["assets/wuwa/resonance/encore/1.png","assets/wuwa/resonance/encore/2.png","assets/wuwa/resonance/encore/3.png","assets/wuwa/resonance/encore/4.png","assets/wuwa/resonance/encore/5.png","assets/wuwa/resonance/encore/6.png"]},
-  {id:"galbrena",name:"Galbrena",rarity:"5★",image:"assets/wuwa/icons/galbrena.jpg",icons:["assets/wuwa/resonance/galbrena/1.png","assets/wuwa/resonance/galbrena/2.png","assets/wuwa/resonance/galbrena/3.png","assets/wuwa/resonance/galbrena/4.png","assets/wuwa/resonance/galbrena/5.png","assets/wuwa/resonance/galbrena/6.png"]},
-  {id:"iuno",name:"Iuno",rarity:"5★",image:"assets/wuwa/icons/iuno.jpg",icons:["assets/wuwa/resonance/iuno/1.png","assets/wuwa/resonance/iuno/2.png","assets/wuwa/resonance/iuno/3.png","assets/wuwa/resonance/iuno/4.png","assets/wuwa/resonance/iuno/5.png","assets/wuwa/resonance/iuno/6.png"]},
-  {id:"jianxin",name:"Jianxin",rarity:"5★",image:"assets/wuwa/icons/jianxin.jpg",icons:["assets/wuwa/resonance/jianxin/1.png","assets/wuwa/resonance/jianxin/2.png","assets/wuwa/resonance/jianxin/3.png","assets/wuwa/resonance/jianxin/4.png","assets/wuwa/resonance/jianxin/5.png","assets/wuwa/resonance/jianxin/6.png"]},
-  {id:"jinhsi",name:"Jinhsi",rarity:"5★",image:"assets/wuwa/icons/jinhsi.jpg",icons:["assets/wuwa/resonance/jinhsi/1.png","assets/wuwa/resonance/jinhsi/2.png","assets/wuwa/resonance/jinhsi/3.png","assets/wuwa/resonance/jinhsi/4.png","assets/wuwa/resonance/jinhsi/5.png","assets/wuwa/resonance/jinhsi/6.png"]},
-  {id:"jiyan",name:"Jiyan",rarity:"5★",image:"assets/wuwa/icons/jiyan.jpg",icons:["assets/wuwa/resonance/jiyan/1.png","assets/wuwa/resonance/jiyan/2.png","assets/wuwa/resonance/jiyan/3.png","assets/wuwa/resonance/jiyan/4.png","assets/wuwa/resonance/jiyan/5.png","assets/wuwa/resonance/jiyan/6.png"]},
-  {id:"lingyang",name:"Lingyang",rarity:"5★",image:"assets/wuwa/icons/lingyang.jpg",icons:["assets/wuwa/resonance/lingyang/1.png","assets/wuwa/resonance/lingyang/2.png","assets/wuwa/resonance/lingyang/3.png","assets/wuwa/resonance/lingyang/4.png","assets/wuwa/resonance/lingyang/5.png","assets/wuwa/resonance/lingyang/6.png"]},
-  {id:"lupa",name:"Lupa",rarity:"5★",image:"assets/wuwa/icons/lupa.jpg",icons:["assets/wuwa/resonance/lupa/1.png","assets/wuwa/resonance/lupa/2.png","assets/wuwa/resonance/lupa/3.png","assets/wuwa/resonance/lupa/4.png","assets/wuwa/resonance/lupa/5.png","assets/wuwa/resonance/lupa/6.png"]},
-  {id:"lynae",name:"Lynae",rarity:"5★",image:"assets/wuwa/icons/lynae.jpg",icons:["assets/wuwa/resonance/lynae/1.png","assets/wuwa/resonance/lynae/2.png","assets/wuwa/resonance/lynae/3.png","assets/wuwa/resonance/lynae/4.png","assets/wuwa/resonance/lynae/5.png","assets/wuwa/resonance/lynae/6.png"]},
-  {id:"mornye",name:"Mornye",rarity:"5★",image:"assets/wuwa/icons/mornye.jpg",icons:["assets/wuwa/resonance/mornye/1.png","assets/wuwa/resonance/mornye/2.png","assets/wuwa/resonance/mornye/3.png","assets/wuwa/resonance/mornye/4.png","assets/wuwa/resonance/mornye/5.png","assets/wuwa/resonance/mornye/6.png"]},
-  {id:"phoebe",name:"Phoebe",rarity:"5★",image:"assets/wuwa/icons/phoebe.jpg",icons:["assets/wuwa/resonance/phoebe/1.png","assets/wuwa/resonance/phoebe/2.png","assets/wuwa/resonance/phoebe/3.png","assets/wuwa/resonance/phoebe/4.png","assets/wuwa/resonance/phoebe/5.png","assets/wuva/resonance/phoebe/6.png"]},
-  {id:"phrolova",name:"Phrolova",rarity:"5★",image:"assets/wuwa/icons/phrolova.jpg",icons:["assets/wuwa/resonance/phrolova/1.png","assets/wuwa/resonance/phrolova/2.png","assets/wuwa/resonance/phrolova/3.png","assets/wuwa/resonance/phrolova/4.png","assets/wuwa/resonance/phrolova/5.png","assets/wuwa/resonance/phrolova/6.png"]},
-  {id:"qiuyuan",name:"Qiuyuan",rarity:"5★",image:"assets/wuwa/icons/qiuyuan.jpg",icons:["assets/wuwa/resonance/qiuyuan/1.png","assets/wuwa/resonance/qiuyuan/2.png","assets/wuwa/resonance/qiuyuan/3.png","assets/wuwa/resonance/qiuyuan/4.png","assets/wuwa/resonance/qiuyuan/5.png","assets/wuwa/resonance/qiuyuan/6.png"]},
-  {id:"roccia",name:"Roccia",rarity:"5★",image:"assets/wuwa/icons/roccia.jpg",icons:["assets/wuwa/resonance/roccia/1.png","assets/wuwa/resonance/roccia/2.png","assets/wuwa/resonance/roccia/3.png","assets/wuwa/resonance/roccia/4.png","assets/wuwa/resonance/roccia/5.png","assets/wuwa/resonance/roccia/6.png"]},
-  {id:"shorekeeper",name:"Shorekeeper",rarity:"5★",image:"assets/wuwa/icons/shorekeeper.jpg",icons:["assets/wuwa/resonance/shorekeeper/1.png","assets/wuwa/resonance/shorekeeper/2.png","assets/wuwa/resonance/shorekeeper/3.png","assets/wuwa/resonance/shorekeeper/4.png","assets/wuwa/resonance/shorekeeper/5.png","assets/wuwa/resonance/shorekeeper/6.png"]},
-  {id:"verina",name:"Verina",rarity:"5★",image:"assets/wuwa/icons/verina.jpg",icons:["assets/wuwa/resonance/verina/1.png","assets/wuwa/resonance/verina/2.png","assets/wuwa/resonance/verina/3.png","assets/wuwa/resonance/verina/4.png","assets/wuwa/resonance/verina/5.png","assets/wuwa/resonance/verina/6.png"]},
-  {id:"xiangli-yao",name:"Xiangli Yao",rarity:"5★",image:"assets/wuwa/icons/xiangli-yao.jpg",icons:["assets/wuwa/resonance/xiangli-yao/1.png","assets/wuwa/resonance/xiangli-yao/2.png","assets/wuwa/resonance/xiangli-yao/3.png","assets/wuwa/resonance/xiangli-yao/4.png","assets/wuwa/resonance/xiangli-yao/5.png","assets/wuwa/resonance/xiangli-yao/6.png"]},
-  {id:"yinlin",name:"Yinlin",rarity:"5★",image:"assets/wuwa/icons/yinlin.jpg",icons:["assets/wuwa/resonance/yinlin/1.png","assets/wuwa/resonance/yinlin/2.png","assets/wuwa/resonance/yinlin/3.png","assets/wuwa/resonance/yinlin/4.png","assets/wuwa/resonance/yinlin/5.png","assets/wuwa/resonance/yinlin/6.png"]},
-  {id:"zani",name:"Zani",rarity:"5★",image:"assets/wuwa/icons/zani.jpg",icons:["assets/wuwa/resonance/zani/1.png","assets/wuwa/resonance/zani/2.png","assets/wuwa/resonance/zani/3.png","assets/wuwa/resonance/zani/4.png","assets/wuwa/resonance/zani/5.png","assets/wuwa/resonance/zani/6.png"]},
-  {id:"zhezhi",name:"Zhezhi",rarity:"5★",image:"assets/wuwa/icons/zhezhi.jpg",icons:["assets/wuwa/resonance/zhezhi/1.png","assets/wuwa/resonance/zhezhi/2.png","assets/wuwa/resonance/zhezhi/3.png","assets/wuwa/resonance/zhezhi/4.png","assets/wuwa/resonance/zhezhi/5.png","assets/wuwa/resonance/zhezhi/6.png"]}
-];
+  "augusta","brant","calcharo","camellya","cantarella","carlotta",
+  "cartethyia","changli","chisa","ciaccona","encore","galbrena",
+  "iuno","jianxin","jinhsi","jiyan","lingyang","lupa","lynae",
+  "mornye","phoebe","phrolova","qiuyuan","roccia","shorekeeper",
+  "verina","xiangli-yao","yinlin","zani","zhezhi"
+].map(id => ({
+  id,
+  name: id.replace(/(^|-)\w/g, m => m.toUpperCase()),
+  rarity:"5★",
+  image:`assets/wuwa/icons/${id}.jpg`
+}));
 
-/* ---------- DATA ---------- */
+/* ===============================
+   STATE
+================================ */
 function defaultChar(){
   return {
     owned:false,
-    weapon:false,
     level:1,
     chain:0,
-    skills:{
-      basic:1,
-      skill:1,
-      forte:1,
-      liberation:1,
-      outro:1
-    }
+    skills:{ basic:1, skill:1, forte:1, liberation:1, outro:1 }
   };
 }
 
 function load(){
   const s = localStorage.getItem(KEY);
-  const data = s ? JSON.parse(s) : {};
+  const d = s ? JSON.parse(s) : {};
   CHARACTERS.forEach(c=>{
-    if(!data[c.id]) data[c.id] = defaultChar();
+    if(!d[c.id]) d[c.id] = defaultChar();
   });
-  save(data);
-  return data;
-}
-
-function save(d){
   localStorage.setItem(KEY,JSON.stringify(d));
+  return d;
 }
 
 function clamp(v,min,max){
   v = Number(v);
-  if(isNaN(v)) return min;
-  return Math.max(min,Math.min(max,v));
+  return isNaN(v)?min:Math.max(min,Math.min(max,v));
 }
 
-/* ---------- RENDER ---------- */
+/* ===============================
+   HELPERS
+================================ */
+function iconPath(id,n){
+  return `${RESONANCE_BASE}/${id}/${n}.jpg`;
+}
+
+function iconError(img){
+  img.onerror=null;
+  img.src=PLACEHOLDER;
+}
+
+/* ===============================
+   RENDER
+================================ */
 function render(){
   const data = load();
   const list = document.getElementById("list");
@@ -200,89 +212,89 @@ function render(){
     const owned = d.owned;
 
     const col = document.createElement("div");
-    col.className="col-md-6 col-lg-4";
+    col.className="col-lg-6";
 
     col.innerHTML = `
-    <div class="card p-3">
-      <div class="char-header">
-        <div class="char-left">
-          <img src="${c.image}" class="char-img">
+      <div class="card">
+        <div class="char-header">
+          <div class="char-left">
+            <img src="${c.image}" class="char-img">
 
-          <div class="chain-icons">
-            ${[1,2,3,4,5,6].map(n=>`
-              <img
-                src="assets/wuwa/resonance/${c.id}/${n}.png"
-                class="chain-icon
-                  ${d.chain>=n?'active':''}
-                  ${owned?'clickable':'disabled'}"
-                ${owned ? `onclick="setChain('${c.id}',${n})"` : ``}
-                onerror="this.onerror=null;this.src='assets/wuwa/resonance/placeholder.png'">
-            `).join("")}
+            <div class="chain-icons">
+              ${[1,2,3,4,5,6].map(n=>`
+                <img
+                  src="${iconPath(c.id,n)}"
+                  class="chain-icon ${d.chain>=n?'active':''} ${owned?'clickable':'disabled'}"
+                  ${owned?`onclick="setChain('${c.id}',${n})"`:''}
+                  onerror="iconError(this)">
+              `).join("")}
+            </div>
+          </div>
+
+          <div class="char-info">
+            <strong>${c.name}</strong>
+            <span class="pill">${c.rarity}</span>
+
+            <div class="mt-2">
+              Level
+              <input type="text" value="${d.level}"
+                oninput="setVal('${c.id}','level',this.value,1,90)"
+                style="width:70px">
+            </div>
+
+            <div class="form-check mt-2">
+              <input class="form-check-input" type="checkbox"
+                ${owned?"checked":""}
+                onchange="setOwned('${c.id}',this.checked)">
+              <label class="form-check-label">Owned</label>
+            </div>
           </div>
         </div>
 
-        <div class="char-info">
-          <strong>${c.name}</strong>
-          <span class="pill">${c.rarity}</span>
+        <hr>
 
-          <div class="mt-2">
-            Level
-            <input type="text" value="${d.level}"
-              oninput="setVal('${c.id}','level',this.value,1,90)"
-              style="width:70px">
+        ${Object.entries(d.skills).map(([k,v])=>`
+          <div class="skill-row">
+            <span>${k}</span>
+            <input type="text" value="${v}"
+              oninput="setSkill('${c.id}','${k}',this.value)"
+              style="width:60px">
           </div>
-
-          <div class="form-check mt-2">
-            <input class="form-check-input" type="checkbox"
-              ${owned?"checked":""}
-              onchange="setOwned('${c.id}',this.checked)">
-            <label class="form-check-label">Owned</label>
-          </div>
-        </div>
+        `).join("")}
       </div>
-
-      <hr>
-
-      ${Object.entries(d.skills).map(([k,v])=>`
-        <div class="skill-row">
-          <span>${k}</span>
-          <input type="text" value="${v}"
-            oninput="setSkill('${c.id}','${k}',this.value)"
-            style="width:60px">
-        </div>
-      `).join("")}
-    </div>
     `;
     list.appendChild(col);
   });
 }
 
-/* ---------- HANDLERS ---------- */
+/* ===============================
+   HANDLERS
+================================ */
 function setOwned(id,val){
-  const d = load();
-  d[id].owned = val;
-  if(!val) d[id].chain = 0;
-  save(d);
+  const d=load();
+  d[id].owned=val;
+  if(!val) d[id].chain=0;
+  localStorage.setItem(KEY,JSON.stringify(d));
   render();
 }
 
 function setChain(id,val){
-  const d = load();
-  d[id].chain = d[id].chain === val ? 0 : val;
-  save(d);
+  const d=load();
+  d[id].chain = d[id].chain===val ? 0 : val;
+  localStorage.setItem(KEY,JSON.stringify(d));
   render();
 }
 
 function setVal(id,key,val,min,max){
-  const d = load();
-  d[id][key] = clamp(val,min,max);
-  save(d);
+  const d=load();
+  d[id][key]=clamp(val,min,max);
+  localStorage.setItem(KEY,JSON.stringify(d));
 }
 
 function setSkill(id,skill,val){
-  const d = load();
-  d[id].skills[skill] = clamp(val,1,10);
-  save(d);
+  const d=load();
+  d[id].skills[skill]=clamp(val,1,10);
+  localStorage.setItem(KEY,JSON.stringify(d));
 }
 
 render();
